[package]
name = "sweettest"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
name = "sweettest"
path = "src/lib.rs"

[dependencies]
holochain = { version = "=0.6.0", default-features = false, features = [
    "sweettest", 
    "test_utils",
    "sqlite-encrypted",
    "wasmer_sys"
] }

# Serialization  
serde = { version = "1.0", features = ["derive"] }

# Async runtime
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# The integrity types from our zomes (for type definitions)
# test-epoch: 1-second epochs and 3-epoch maturity for fast integration tests.
transaction_integrity = { path = "../../dnas/edet/zomes/integrity/transaction", features = ["test-epoch"] }
tx5-connection = { version = "0.8.1", default-features = false, features = ["backend-go-pion"] }

[dev-dependencies]
# Test utilities
serial_test = "3"
